# Gizmo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
contributing/: CONTRIBUTING.md  resources.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/osdialog/: CMakeLists.txt
lib/osdialog/src/: osdialog.c  osdialog.h  osdialog_gtk2.c  osdialog_gtk3.c  osdialog_win.c
src/: clock.h  common.cpp  common.h  cpu.h  logger.h  main.cpp  registers.h  sdltest.cpp  utils.cpp  utils.h
src/display/: display.cpp  display.h  oam.cpp  oam.h  virt_ram.cpp  virt_ram.h
src/events/: input_events.cpp  input_events.h  window_events.cpp  window_events.h
src/memory_map/: memory_map.cpp  memory_map.h
src/renderer/: draw.cpp  renderer.h
